--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@ body{
 }
 
 h2{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Stack Sans Headline", sans-serif;
+    font-size: 4rem;
+    position: relative;
+    top: -20px;
+
 }
 
 section{
@@ -33,10 +37,6 @@ section{
     padding-right: 70px;
 }
 
-h2{
-    font-size: 4rem;
-    margin-bottom: 10px;
-}
 
 img{
     width: 100%;
@@ -311,7 +311,8 @@ label{
     }
     
     h2{
-        font-size: 2.5rem;        
+        font-size: 2.5rem;
+        top: 10px;        
     }
 
     .odin-logo {
